--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <p>Feel free to reach out for any cloud solutions, DevOps automation, or infrastructure consultation.</p>
 
         <div class="contact-info">
-            <p><strong>Name:</strong> [Your Name]</p>
+            <p><strong>Name:</strong> Adiba Khan</p>
             <p><strong>Email:</strong> <a href="mailto:[adibakhn2020@gmail.com]">adibakhn2020@gmail.com</a></p>
             <p><strong>Phone:</strong> +91 9839832976</p>
             <p><strong>LinkedIn:</strong> <a href="[https://www.linkedin.com/in/adibaalikhan/]" target="_blank">LinkedIn Profile</a></p>
